# scalable-real2sim

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  pyproject.toml  run_asset_generation.py  run_data_collection.py
.docker/: Dockerfile
scalable_real2sim/data_processing/: alpha_channel.py  colmap.py  frosting.py  image_subsampling.py  masks.py  nerfstudio.py  neuralangelo.py
scalable_real2sim/output/: canonicalize.py  sdformat.py
scalable_real2sim/segmentation/: detect_object.py  segment_moving_object_data.py
scalable_real2sim/segmentation/finetuned_grounding_dino_utils/: coco_detection.py  default_runtime.py  grounding_dino_swin-t_finetune_16xb2_1x_coco.py  schedule_1x.py
scripts/: compute_geometric_metrics.py  segment_moving_obj_data.py  subtract_masks.py
